adding pom arguments